plugins {
    id 'java-library'
    id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

task sourceJar(type: Jar) {
    from sourceSets.main.allJava
    classifier 'sources'
}

afterEvaluate {
    publishing {
        publications {
            release(MavenPublication) {
                group = 'net.jimblackler'
                artifactId = 'jsonschemafriend'
                version = '0.7.3'
                artifact(sourceJar)
                from components.java
            }
        }
    }
}

dependencies {
    //implementation 'com.github.jimblackler:JSON-java:v0.2-alpha'
    implementation 'org.json:json:20200518'
    implementation 'commons-validator:commons-validator:1.7'
    implementation 'com.sun.mail:javax.mail:1.6.2'
    testImplementation 'com.github.everit-org.json-schema:org.everit.json.schema:1.12.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
}